[metadata]
name = aws_pas
version = 0.1
description = assistance suite for AWS policies management
long_description = file: README.md
long_description_content_type = text/markdown
author = Silvio Lugaro
author_email = silvio.lugaro@gmail.com

[options]
packages = find:
python_requires = >=3.9
install_requires =
    loguru        
    boto3
    setuptools-git-versioning
    policyuniverse

[options.packages.find]
exclude = notebook,scripts

[options.extras_require]
dev = 
    ipykernel
    autopep8

gui =
    streamlit
    streamlit-echarts
